--- a/RentalStore/Content/Partials/movieDetails.html
+++ b/RentalStore/Content/Partials/movieDetails.html
@@ -25,7 +25,7 @@
                 <div class="pull-right">
                     <a ng-href="{{movie.TrailerURL}}" class="btn btn-primary fancybox-media">Посмотреть трейлер  <i style="padding-top: 4.5px" class="fa fa-video-camera pull-right"></i></a>
                     <a ng-show="movie.Count > 0" ng-click="addToCart()" class="btn btn-default">Добавить в корзину  <i style="padding-top: 4.4px" class="fa fa-plus pull-right"></i></a>
-                    <a ng-show="userId==1" ng-href="/movies/edit/{{movie.Id}}" class="btn btn-default">Редактировать  <i style="padding-top: 3.6px" class="fa fa-pencil-square pull-right"></i></a>
+                    <a ng-show="userRole=='admin'" ng-href="/movies/edit/{{movie.Id}}" class="btn btn-default">Редактировать  <i style="padding-top: 3.6px" class="fa fa-pencil-square pull-right"></i></a>
                 </div>
             </div>
         </div>
