--- a/RentalStore/Content/Partials/register.html
+++ b/RentalStore/Content/Partials/register.html
@@ -1,24 +1,36 @@
 ﻿<div class="col-md-6 col-md-offset-3">
-    <form class="form-horizontal" ng-submit="register()">
+    <div ng-show="success" class="alert alert-success alert-dismissable">
+        Регистрация успешно завершена.
+    </div>
+
+    <div ng-show="error" class="alert alert-danger alert-dismissable">
+        <a class="panel-close close" data-dismiss="alert">×</a>
+        {{message}}
+    </div>
+
+    <form class="form-horizontal" novalidate angular-validator name="registerForm" angular-validator-submit="register()">
         <fieldset>
             <legend class="text-center">Регистрация</legend>
             <div class="auth-pading form-group">
                 <label for="login" class="col-lg-2 control-label">Логин</label>
                 <div class="col-lg-10">
-                    <input ng-model="user.Username" class="form-control" id="login" placeholder="Имя пользователя" type="text">
+                    <input  ng-model="user.Username" class="form-control" name="login" placeholder="Имя пользователя" type="text"
+                           validate-on="blur" required required-message="'Пожалуйста, введите имя пользователя'">
                 </div>
             </div>
 
             <div class="auth-pading form-group">
                 <label for="inputEmail" class="col-lg-2 control-label">Email</label>
                 <div class="col-lg-10">
-                    <input ng-model="user.Email" class="form-control" id="inputEmail" placeholder="Email" type="text">
+                    <input ng-model="user.Email" class="form-control" name="inputEmail" placeholder="Email" type="email"
+                           validate-on="blur" required required-message="'Пожалуйста, введите email'"
+                           invalid-message="'Вы ввели неправильный email'">
                 </div>
             </div>
             <div class="auth-pading form-group">
                 <label for="inputPassword" class="col-lg-2 control-label">Пароль</label>
                 <div class="col-lg-10">
-                    <input ng-model="user.Password" class="form-control" id="inputPassword" placeholder="Пароль" type="password">
+                    <input ng-model="user.Password" class="form-control" name="inputPassword" placeholder="Пароль" type="password" validate-on="blur" required required-message="'Пожалуйста, введите пароль'">
                 </div>
             </div>
 
