--- a/RentalStore/Content/Partials/cart.html
+++ b/RentalStore/Content/Partials/cart.html
@@ -35,7 +35,7 @@
 
         <div class="col-sm-6 col-md-10 form-group">
                 <button ng-click ="close()" type="reset" class="btn btn-default">Отмена</button>
-                <button ng-click="countPrice()" type="submit" class="btn btn-primary">Оформить заказ</button>
+                <button ng-if="moviesToShow.length != 0" ng-click="countPrice()" type="submit" class="btn btn-primary">Оформить заказ</button>
         </div>
     </div>
 </div>
